fix: now background image works fine on mobile

--- a/weatherApp/src/components/Footer/style.css
+++ b/weatherApp/src/components/Footer/style.css
@@ -3,6 +3,7 @@
     gap: 4rem;
     width: 100%;
     justify-content: center;
+    margin-bottom: 2.5rem;
 }
 
 .footerContainer ul li a {
